--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <svg class="bi me-2" width="40" height="32" aria-hidden="true">
                     <use xlink:href="#bootstrap"></use>
                 </svg>
-                <span class="fs-3" style="font-weight: bolder">HD WALLPAPER HUB</span>
+                <span class="fs-3" style="font-weight: bolder"><span style="color: red;">HD</span> WALLPAPER HUB</span>
             </a>
             <ul class="nav nav-pills">
                 <li class="nav-item">
@@ -25,12 +25,11 @@
                 </li>
                 <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">About</a></li>
             </ul>
         </header>
 
-        <div class="album py-5 bg-body-tertiary">
+        <div class="album py-5 bg-body-primary">
             <div class="container flex-wrap">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
@@ -52,7 +51,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">9 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +75,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">9 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -100,7 +99,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">10 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +123,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">10 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -148,7 +147,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">9 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -172,7 +171,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">8 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -196,7 +195,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">9 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +219,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">9 MB</small>
                                 </div>
                             </div>
                         </div>
@@ -244,7 +243,7 @@
                                             Download
                                         </button>
                                     </div>
-                                    <small class="text-body-secondary">9 mins</small>
+                                    <small class="text-body-secondary">7 MB</small>
                                 </div>
                             </div>
                         </div>
