--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
     <title>Document</title>
+    
 </head>
 
 <body>
@@ -17,11 +18,13 @@
                 <svg class="bi me-2" width="40" height="32" aria-hidden="true">
                     <use xlink:href="#bootstrap"></use>
                 </svg>
+            
                 <span class="fs-2" style="font-weight: bolder"><span style="color: red;">HD</span> WALLPAPER HUB</span>
             </a>
             <ul class="nav nav-pills">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active" aria-current="page">Wallpaper</a>
+                    <a href="#" class="nav-link active" aria-current="page" style="background-color: red;">Wallpaper</a>
+
                 </li>
                 <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
                 <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
@@ -36,7 +39,7 @@
                         <div class="card shadow-sm">
                             <img src="https://a-static.besthdwallpaper.com/beautiful-artistic-night-wallpaper-1680x1050-10518_5.jpg"
                                 height="225" width="100%" alt="">
-                            <div class="card-body">
+                            <div class="card-body bg-body-primary">
                                 <p class="card-text">
                                     This is a wider card with supporting text below as a natural
                                     lead-in to additional content. This content is a little bit
@@ -253,7 +256,7 @@
         </div>
         <div class="container">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                <p class="col-md-4 mb-0 text-body-secondary" style="align-items: center;">
+                <p class="col-md-4 mb-0 text-body-primary" style="align-items: center; font-weight: bolder;">
                     © 2025 HD WALLPAPER HUB, Inc
                 </p>
             </footer>
